Add XML write and read configuration Rename namespaces to compile Add dialog handling prototype Change default company name

--- a/FTP_Image_Browser.csproj
+++ b/FTP_Image_Browser.csproj
@@ -107,6 +107,9 @@
     <Compile Include="Overlay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form_Server_Settings.resx">
+      <DependentUpon>Form_Server_Settings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main_Window.resx">
       <DependentUpon>Main_Window.cs</DependentUpon>
     </EmbeddedResource>
