--- a/FTP_Image_Browser.csproj
+++ b/FTP_Image_Browser.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F7BAB706-40E1-4E1A-8144-85087E3B2D82}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UAVFORS_Viever</RootNamespace>
+    <RootNamespace>UAVFORS_Viewer</RootNamespace>
     <AssemblyName>UAVFORS Viewer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -91,6 +91,12 @@
     <Compile Include="Main_Window.Designer.cs">
       <DependentUpon>Main_Window.cs</DependentUpon>
     </Compile>
+    <Compile Include="RoiDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RoiDialog.Designer.cs">
+      <DependentUpon>RoiDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main_Window.resx">
       <DependentUpon>Main_Window.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RoiDialog.resx">
+      <DependentUpon>RoiDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewDisplay.resx">
       <DependentUpon>ViewDisplay.cs</DependentUpon>
